--- a/style_results.css
+++ b/style_results.css
@@ -1,3 +1,32 @@
-.live_results_table {
-	color:red;
+html {
+/*
+	font-family: 'Fira Sans Extra Condensed', sans-serif;
+	font-family: 'Cuprum', sans-serif;
+	font-family: 'Ubuntu Condensed', sans-serif;
+	font-family: 'Open Sans Condensed', sans-serif;
+*/
+}
+
+body {
+	text-align: center;
+	font-family: 'Roboto Condensed', sans-serif;
+	
+}
+
+ul {
+	list-style-type: none;
+	overflow: auto;
+	padding: 0px;
+	padding-bottom: 10px;
+	margin: 0px;
+}
+
+ul li {
+	display: block;
+	float: left;
+	width: 33.33%;
+}
+
+table {
+	text-align: center;
 }
