--- a/style_results.css
+++ b/style_results.css
@@ -17,16 +17,63 @@ ul {
 	list-style-type: none;
 	overflow: auto;
 	padding: 0px;
-	padding-bottom: 10px;
+	padding: 10px;
 	margin: 0px;
 }
 
 ul li {
 	display: block;
 	float: left;
-	width: 33.33%;
+	width: 32.33%;
+	padding-right: 1%;
+
 }
 
 table {
 	text-align: center;
+}
+
+.subraces_list ul li, .subraces_list ul li a{
+	color: white;
+	font-size: 1.2em;
+}
+
+
+.subrace {
+
+	padding: 1em 0em 1em 0em;
+	background-color: #900000;
+}
+
+.official_results_link, .separator_results_link {
+	display: none;
+}
+
+/* TABLE */
+.live_results_table_wrapper {
+    width: 100%;
+    margin: 10px;
+    padding-bottom: 20px;
+    overflow-x: auto;
+}
+
+
+.live_results_table {
+    border-collapse: collapse;
+    overflow-x: auto;
+    margin: 0 auto;
+}
+
+.live_results_table th, td {
+    padding: 2px 10px 2px 10px;
+	white-space: nowrap;
+}
+
+.live_results_table tr:nth-child(even){
+	background-color: #f2f2f2
+}
+
+.live_results_table th {
+    background-color: #4CAF50;
+    color: white;
 }
