--- a/style_results.css
+++ b/style_results.css
@@ -70,10 +70,28 @@ table {
 }
 
 .live_results_table tr:nth-child(even){
-	background-color: #f2f2f2
+	background-color: #f2f2f2;
 }
 
 .live_results_table th {
     background-color: #4CAF50;
     color: white;
+}
+
+.live_results_table tr:hover {
+	background-color: #343;
+    color: white;
+}
+
+.table_cell_col7 {
+	text-align: left;
+}
+
+.table_cell_col7 img {
+    height: 18px;
+    margin-bottom: -2px;
+}
+
+.table_header_cell_col6, .table_cell_col6 {
+	display:none;
 }
